# ai_engine_lab_1

./: generator(part2).py  part3.py  part4.py  pyproject.toml  sp(part1).py  ss.py
